--- a/style.css
+++ b/style.css
@@ -4,9 +4,14 @@
     scroll-padding-top: 200px;
 }
 
+@media only screen and (max-width: 600px) {
+    * {
+        scroll-padding-top: 380px;
+    }
+}
+
 body {
     background-color: white;
-    min-width: 700px;
     font-family: "Libre Franklin",
         "Helvetica Neue",
         helvetica,
@@ -20,6 +25,10 @@ main {
 
 section{
     margin-bottom: 20px;
+}
+
+.menu-button {
+    display: none;
 }
 
 nav button {
@@ -39,6 +48,35 @@ nav button {
 nav button:hover {
     color: #9ed3f6;
 }
+
+@media only screen and (max-width: 600px) {
+    nav {
+        flex-direction: column;
+        align-items: center;
+        display: none;
+    }
+
+    .menu-button {
+        display: block;
+        background-color: transparent;
+        border: 0;
+        color: gray;
+        font-weight: 800;
+        font-size: 14px;
+        font-family: "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
+        margin: 10px auto;
+        cursor: pointer;
+    }
+
+    .menu-button:hover {
+        color: #9ed3f6;
+    }
+
+    nav.active {
+        display: flex;
+    }
+}
+
 
 header {
     position: sticky;
@@ -84,7 +122,7 @@ h2 {
     background-color: #9ed3f6;
 }
 
-.introbox {
+/* .introbox {
     background-color: #9ed3f6;
     padding-left: 20px;
     max-width: 800px;
@@ -100,12 +138,12 @@ h2 {
 .text {
     letter-spacing: 0.05em;
     line-height: 1.5;
-}
+} */
 
 .gamepro {
     display: flex;
-    align-items: center;
     margin-bottom: 50px;
+    flex-direction: row;
 }
 
 .projectimg {
@@ -147,12 +185,35 @@ h2 {
 }
 
 .text-container {
-    width: 300px;
-    min-width: 400px;
-    height: 450px;
     font-size: 13px;
     letter-spacing: 0.05em;
     line-height: 1.5;
+    min-width: 400px;
+    height: 450px;
+}
+
+@media only screen and (max-width: 600px) {
+    .gamepro {
+        flex-direction: column;
+        margin-bottom: 30px;
+    }
+
+    .projectimg {
+        margin: 0;
+    }
+
+    .projectimg video,
+    .projectpic {
+        width: 100%; /* Make the image or video scale with the width of its container */
+        height: auto; /* Automatically adjust the height to maintain aspect ratio */
+        object-fit: cover; /* You can use 'cover' or 'contain' depending on your preference */
+    }
+
+    .text-container {
+        margin-top: 5px;
+        min-width: 0;
+        height: auto;
+    }
 }
 
 button.playgame {
@@ -226,20 +287,18 @@ img.codepic {
 
 .modelpro {
     display: flex;
-    align-items: center;
     margin-bottom: 50px;
 }
 
 .modelvid {
-    margin-right: 40px;
     position: relative;
     display: inline-block;
 }
 
-video {
-    width: 600px;
-    height: auto;
-    display: block;
+.modelvid video {
+    width: 100%; /* Make the image or video scale with the width of its container */
+    height: auto; /* Automatically adjust the height to maintain aspect ratio */
+    object-fit: cover;
 }
 
 .artboard{
