--- a/style.css
+++ b/style.css
@@ -122,11 +122,11 @@ h2 {
     background-color: #9ed3f6;
 }
 
-/* .introbox {
+.introbox {
     background-color: #9ed3f6;
     padding-left: 20px;
-    max-width: 800px;
-    margin: 0 auto;
+    /* max-width: 800px; */
+    /* margin: 0 auto; */
 }
 
 .introtext {
@@ -138,7 +138,7 @@ h2 {
 .text {
     letter-spacing: 0.05em;
     line-height: 1.5;
-} */
+}
 
 .gamepro {
     display: flex;
