--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ section {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100% - 50px;
 }
 
 button.tag {
@@ -225,7 +225,7 @@ h2 {
 .projectlist {
     overflow-y: auto; /* Enable vertical scrolling for the projectlist */
     flex-grow: 1; /* Allow the projectlist to grow and take remaining space */
-    max-height: calc(100% - 200px);
+    max-height: calc(80%);
 }
 
 /* Add this if needed to style the scroll bar */
